--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-html2pdf": "^1.8.0",
+    "vue-resize-text": "^0.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
