--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-html-to-paper": "^1.3.1",
     "vue-html2pdf": "^1.8.0",
     "vue-resize-text": "^0.1.1"
   },
